--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST=127.0.0.1
-DB_DATABASE="faceauthea"
-DB_USER="root"
-DB_PASSWORD=""
+DB_HOST=baztxrys2ysrlfcy6o96-mysql.services.clever-cloud.com
+DB_DATABASE="baztxrys2ysrlfcy6o96"
+DB_USER="ugmcvowrtys7ss0q"
+DB_PASSWORD="RNURwjXwl0xRh9nPx9VC"
 DB_PORT=3306
